// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> help renders 1`] = `
<div>
  <input
    id="form-0_mock_6"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_6"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Radio /> label renders 1`] = `
<div>
  <input
    id="form-0_mock_3"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_3"
  >
    Label
  </label>
</div>
`;

exports[`<Radio /> renders 1`] = `
<div>
  <input
    id="form-0_mock_0"
    type="radio"
    value="100"
  />
  <label
    for="form-0_mock_0"
  >
    Example
  </label>
</div>
`;
